.metadata/.plugins/org.eclipse.cdt.ui/SPFinalProject.build.log
18:38:47 **** Incremental Build of configuration Debug for project SPFinalProject ****
Info: Internal Builder is used for build
gcc -O0 -g3 -Wall -c -fmessage-length=0 -std=c99 -o KDTree.o "..\\KDTree.c" 
..\KDTree.c: In function 'buildKDTree':
..\KDTree.c:42:4: error: invalid use of undefined type 'struct sp_point_t'
    spread = (int)((array->pointArr[-1][0])-(array->pointArr[0][0]));
    ^
..\KDTree.c:42:39: error: dereferencing pointer to incomplete type
    spread = (int)((array->pointArr[-1][0])-(array->pointArr[0][0]));
                                       ^
..\KDTree.c:42:4: error: invalid use of undefined type 'struct sp_point_t'
    spread = (int)((array->pointArr[-1][0])-(array->pointArr[0][0]));
    ^
..\KDTree.c:42:63: error: dereferencing pointer to incomplete type
    spread = (int)((array->pointArr[-1][0])-(array->pointArr[0][0]));
                                                               ^
..\KDTree.c:44:15: warning: assignment from incompatible pointer type
    left,right = spKdarraySplit(array, random);
               ^
..\KDTree.c:44:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
    left,right = spKdarraySplit(array, random);
        ^
..\KDTree.c:48:4: error: invalid use of undefined type 'struct sp_point_t'
    spread = (int)((array->pointArr[-1][1])-(array->pointArr[1][0]));
    ^
..\KDTree.c:48:39: error: dereferencing pointer to incomplete type
    spread = (int)((array->pointArr[-1][1])-(array->pointArr[1][0]));
                                       ^
..\KDTree.c:48:4: error: invalid use of undefined type 'struct sp_point_t'
    spread = (int)((array->pointArr[-1][1])-(array->pointArr[1][0]));
    ^
..\KDTree.c:48:63: error: dereferencing pointer to incomplete type
    spread = (int)((array->pointArr[-1][1])-(array->pointArr[1][0]));
                                                               ^
..\KDTree.c:51:15: warning: assignment from incompatible pointer type
    left,right = spKdarraySplit(array,random);
               ^
..\KDTree.c:51:8: warning: left-hand operand of comma expression has no effect [-Wunused-value]
    left,right = spKdarraySplit(array,random);
        ^
..\KDTree.c:53:30: warning: passing argument 1 of 'buildKDTree' from incompatible pointer type
   kdtree->left = buildKDTree(left, depth+1);
                              ^
..\KDTree.c:17:8: note: expected 'SPKDArray' but argument is of type 'KDTree'
 KDTree buildKDTree(SPKDArray array, int depth){
        ^
..\KDTree.c:54:30: warning: passing argument 1 of 'buildKDTree' from incompatible pointer type
   kdtree->left = buildKDTree(right, depth+1);
                              ^
..\KDTree.c:17:8: note: expected 'SPKDArray' but argument is of type 'KDTree'
 KDTree buildKDTree(SPKDArray array, int depth){
        ^

18:38:47 Build Finished (took 145ms)

